# homework

./: .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  example.env  manage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: default.md
.github/PULL_REQUEST_TEMPLATE/: default.md
common_utils/: apps.py  celery.py  constants.py  decorators.py  feature_flags.py  models.py  views.py
common_utils/redis/: connection.py  keys.py
profiles/: admin.py  apps.py  models.py
profiles/migrations/: 0001_initial.py
project_root/: settings.py  urls.py
templates/admin/: base_site.html  feature_flags.html
