[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "django (==5.2)",
    "psycopg2-binary (==2.9.11)",
    "django-environ (==0.12.0)",
    "djangorestframework (==3.16.1)",
    "drf-spectacular (==0.29.0)",
    "drf-standardized-errors (==0.15.0)",
    "pillow (==12.1.0)",
    "drf-spectacular-sidecar (==2026.1.1)",
    "pydantic (==2.12.5)",
    "redis (==7.4.0)",
    "django-redis (==6.0.0)",
    "celery (==5.6.3)",
]


[build-system]
requires = ["poetry-core==2.3.4"]
build-backend = "poetry.core.masonry.api"
